# posix

./: .travis.yml  .travis_build.sh  LICENSE  Makefile.am  README.md  configure.ac  install-links
src/: handlers.h  main.c
src/handlers/: cat.c  dirname.c  false.c  logname.c  posix_basename.c  posix_cat.c  posix_true_false.c  sleep.c  tee.c  true.c  true_false.c
